# gh-spray

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build.yml  release.yml
src/: alphabet.rs  main.rs
