[package]
name = "gh-spray"
version = "0.1.2"
edition = "2021"
author = "miten"
description = "A tool to generate a lot of GitHub activity"
license = "MIT"
repository = "https://github.com/m1ten/gh-spray"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
git2 = "0.19.0"
rand = "0.8.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
