[package]
name = "gh-spray"
version = "0.2.0"
edition = "2021"
authors = ["miten"]
description = "A tool to generate a lot of GitHub activity"
license = "MIT"
repository = "https://github.com/m1ten/gh-spray"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
crossterm = "0.28.1"
git2 = { version = "0.19.0", default-features = false }
rand = "0.8.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
